<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                tools:text="0:00"
                android:textColor="?android:textColorSecondary"
                android:textSize="42sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag=":aesthetic_ignore" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:tag=":aesthetic_ignore"
                android:text="@string/title_repeat" />

            <LinearLayout
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

                <james.alarmio.views.DaySwitch
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/ringtone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:minWidth="72dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ringtoneImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginBottom="4dp"
                            android:scaleType="centerInside"
                            android:tint="?android:textColorPrimary"
                            app:srcCompat="@drawable/ic_ringtone_disabled" />

                        <TextView
                            android:id="@+id/ringtoneText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/title_none"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="14sp" />

                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:minWidth="72dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/vibrateImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="centerInside"
                            android:layout_marginBottom="4dp"
                            android:tint="?android:textColorPrimary"
                            app:srcCompat="@drawable/ic_vibrate_to_none" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/title_vibrate"
                            android:textAlignment="center"
                            android:textColor="?android:textColorPrimary"
                            android:textSize="14sp" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <ImageView
                android:id="@+id/expandImage"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="centerInside"
                android:tint="?android:textColorPrimary"
                app:srcCompat="@drawable/ic_expand" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/title_alarm_name"
                    android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/underline"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="4dp"
                    android:background="@color/textColorSecondaryNight" />

            </LinearLayout>

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title_delete"
                android:paddingBottom="4dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/indicators"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <ImageView
                    android:id="@+id/repeatIndicator"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:tint="?android:textColorPrimary"
                    app:srcCompat="@drawable/ic_repeat" />

                <ImageView
                    android:id="@+id/soundIndicator"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:tint="?android:textColorPrimary"
                    app:srcCompat="@drawable/ic_sound" />

                <ImageView
                    android:id="@+id/vibrateIndicator"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:tint="?android:textColorPrimary"
                    app:srcCompat="@drawable/ic_vibrate" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>